findReviewsByUser fix
